<resources>
    <string name="app_name">FurnitureStore</string>

    <string name="hello">Hello</string>
    <string name="welcome">What would you like to buy?</string>
    <string name="Trend">All</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="vendor">Vendor</string>

    <string name="skip">Skip</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="or">Or</string>
    <string name="SignUP">Sign Up</string>
    <string name="google">Sign Up With Google</string>
    <string name="action_settings">Setting</string>
    <string name="LogIn">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="repotDialogTilie">Choose report</string>
    <string name="detailsBTN">Details</string>
    <string name="forgetPass">Forget Password?</string>
    <string name="back">Back</string>
    <string name="RestPass">Reset Password</string>
    <string name="Reset">Reset</string>
    <string name="AddNewProduct">Add New Product</string>
    <string name="NameProduct">Product Name</string>
    <string name="PriceProductDolar">Product Price In Dollar</string>
    <string name="PriceProductRial">Product Price In Rial</string>
    <string name="Quantity">Quantity</string>
    <string name="selectImage">Select Image</string>
    <string name="Add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Home">home</string>
    <string name="Category">category</string>
    <string name="Cart">cart</string>
    <string name="Purchases">purchases</string>
    <string name="Profile">profile</string>
    <string name="my_account">My Account</string>
    <string name="MyAccount">My Account</string>
    <string name="log_out">log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="Delivery_Addresses">Delivery_Addresses</string>
    <string name="my_Balance">My Balance</string>
    <string name="my_products">My Products</string>
    <string name="go_back">Back</string>
    <string name="add_category">Add Category</string>
    <string name="update_category">Update Category</string>
    <string name="productDetails">Product Details</string>
    <string name="add">Add</string>
    <string name="fab">fab</string>
    <string name="close">close</string>
    <string name="newPassword">New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="changePassword">Change Password</string>
    <string name="CategoryProduct">Product Category</string>
    <string name="PriceProduct">Price</string>
    <string name="AddToCart">Add to Cart</string>
    <string name="VendorProduct">Product Vendor</string>
    <string name="PriceD">0.00 $</string>
    <string name="PriceR">0.00 RY</string>
    <string name="remeberMe">remember me</string>
    <string name="log_in">Log in</string>
    <string name="show_categories">show categories</string>
    <string name="show_users_reports">Users reports</string>
    <string name="show_products_reports">Products reports</string>
    <string name="show_users">Users</string>
    <string name="add_reports">Add reports</string>
    <string name="show_reports_details">Show reports details</string>
    <string name="admin">Admin</string>
    <string name="produt_raidoBtn_first">Fake Product</string>
    <string name="produt_raidoBtn_second">Corrupt Product</string>
    <string name="produt_raidoBtn_third">Poor quality</string>

    <string name="activ">Selling and Purchase Operations</string>
    <string name="quantity">1</string>
    <string name="save">save</string>
    <string name="confirm_cart">Confirm</string>
    <string name="delete">delete</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_purchases">My purchases</string>
    <string name="NameUser">user name</string>
    <string name="MyProfile">My Profile</string>

    <string name="categoryName">Category Name</string>
    <string name="productDetailsText">"product Details Text Text Text product Details Text product Details Text product Details Text product Details   "</string>


    <string name="furniture_store_is_an_e_commerce_application_where_you_can_display_your_products_for_sale_and_through_it_users_can_communicate_with_you_for_purchase_the_application_has_many_advantages_where_you_can_communicate_via_chat_with_the_seller_and_receive_new_offers_you_can_also_evaluate_the_products_through_it_and_add_them_to_the_cart_this_is_with_the_furniture_store_app">Furniture Store is an e-commerce application where you can display your products for sale and through it users can communicate with you for purchase. The application has many advantages where you can communicate via chat with the seller and receive new offers. You can also evaluate the products through it and add them to the cart. This is with the Furniture Store app</string>


    <string name="description">Handcrafted for beauty and strength. - Natural, handcrafted CASTLECREEK Cedar Log Twin Bed is made from Northern White Cedar logs. Sturdy. Handsome. Distinctive. Just what you need to add natural warmth to your bedroom, at home, or at the cabin. All pieces are sanded smooth to provide enduring beauty, ready to finish or left to age naturally and gracefully. When it all comes together, </string>
    <string name="find_furn">Find the best Furniture!</string>

</resources>