<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Home_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="16sp"
                    android:textColor="@color/colorGray"/>
            </LinearLayout>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:src="@drawable/search"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
               />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications_24px"

                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trend"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_shap"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="12sp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/button_shap_white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textSize="12sp"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/button_shap_white"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vendor"
                android:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/button_shap_white"
                android:textSize="12sp"
                android:layout_marginLeft="4dp"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show_product_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"/>
    </LinearLayout>


</FrameLayout>