<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/layoutback_ground"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="-47dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:text="@string/LogIn"
            android:textColor="#000"
            android:textSize="19sp" />


        <EditText

            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="170dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_outline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000000"
            android:textColorHint="#000">


        </EditText>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_outline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000000"
            android:textColorHint="#000" />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:layout_marginLeft="200dp"
            android:text="@string/forgetPass"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="285dp"
            android:layout_marginLeft="50dp"
            android:textColorHighlight="@color/colorPrimaryLight"
            android:shadowColor="@color/colorPrimaryLight"
            android:text="@string/remeberMe"
            android:textColor="@color/colorPrimaryLight" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="45dp"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/LogIn"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/shape_nav"
            android:enabled="true"/>
        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="45dp"
            android:layout_marginTop="390dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/SignUP"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/shape_nav"
            android:enabled="true" />



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>