<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sign_up_container"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/skip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="296dp"
        android:layout_marginRight="296dp"
        android:drawableLeft="@drawable/arrow_white"
        android:text="@string/skip"
        android:textColor="#fff"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/layoutback_ground"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="-47dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="30dp"
            android:text="@string/createNewAccount"
           android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="#000"
            android:textSize="15sp" />



        <EditText

            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="Name"
            android:inputType="textEmailAddress"

            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textColorHint="#000">


        </EditText>


        <EditText

            android:id="@+id/emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_outline_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:layout_below="@+id/name"
            android:inputType="textEmailAddress"

            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textColorHint="#000">


        </EditText>


        <EditText

            android:id="@+id/passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailSignUp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"

            android:drawableLeft="@drawable/ic_outline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingBottom="20dp"
            android:textColor="#000"
            android:textColorHint="#000" />

        <Button

            android:id="@+id/emailUse"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="45dp"
            android:layout_below="@+id/forgot_password"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/SignUP"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@drawable/shape_nav"
            android:enabled="true"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp"
            android:layout_marginLeft="200dp"
            android:gravity="center"
            android:text="@string/or"
            android:textStyle="normal"
            android:textColor="#000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/GoogleAccount"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_height="45dp"
            android:layout_below="@+id/emailUse"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/google"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@drawable/google_background"
            android:enabled="true"/>

        <ImageView
            android:layout_width="34dp"
            android:layout_height="37dp"
            android:layout_alignStart="@+id/GoogleAccount"
            android:layout_alignEnd="@+id/GoogleAccount"
            android:layout_alignBottom="@+id/GoogleAccount"
            android:layout_marginStart="41dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="255dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/google" />

        <TextView
           android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="485dp"
            android:layout_marginLeft="30dp"
            android:text="@string/LogIn"
            android:textColor="@color/colorBlack"

            android:textSize="17sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>