<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/general_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/report_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_shape2"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/repotDialogTilie"
            android:textColor="#fff"
            android:textSize="24sp" />


        <RadioGroup
            android:id="@+id/product_report_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/product_report_radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:clickable="true"
                android:text="@string/produt_raidoBtn_first"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/product_report_radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:clickable="true"
                android:text="@string/produt_raidoBtn_second"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/product_report_radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:clickable="true"
                android:text="@string/produt_raidoBtn_third"
                android:textSize="24sp" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_alignParentRight="true">
            <Button
                android:id="@+id/submit_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:background="@drawable/custom_shape3"
                android:text="Submit"
                android:textColor="#fff" />
            <Button
                android:id="@+id/cancel_report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custom_shape"
                android:text="Cancel"

                android:textColor="@color/colorPrimaryLight2" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>